fix(code-quality): address CodeQL alerts for code quality issues
Fixed issues:
1. Uncaught NumberFormatException in DataImportService
   - Added try-catch with meaningful error messages for all parse methods
   - Sanitized error messages using LogSanitizer

2. Unused parameters removed:
   - TransactionService.create(): removed stringAccountMappings
   - TelegramBotService.handlePhotoMessage(): removed userId, username
   - FiscalYearClosingService.generateJournalNumber(): removed suffix
   - DepreciationReportService.createReportItem(): removed yearStart, yearEnd
   - CoretaxExportService.createEFakturSheet(): removed sheetName

3. Unused local variables removed:
   - PayrollController.recalculate(): removed unused payrollRun result
   - AssetCategoryController.create(): removed unused saved result

4. Internal representation exposure fixed:
   - Transaction: getAccountMappings(), getVariables(), getJournalEntries()
     now return Collections.unmodifiableList()
   - PayrollRun: getDetails() now returns unmodifiable list
   - JournalTemplate: getLines(), getTags() now return unmodifiable lists

5. Deprecated Locale constructor replaced:
   - Replaced new Locale("id", "ID") with Locale.of("id", "ID")
   - Affected: ReportExportService, PayrollReportService,
     JournalTemplateController, PayrollRun, DepreciationEntry

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>